add gitlab link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <div class="links-container">
           <a
             class="external-page"
+            href="https://gitlab.com/rakanshaker"
+            target="_blank"
+          >
+            <span class="icon gitlab"></span> Gitlab
+          </a>
+          <a
+            class="external-page"
             href="https://github.com/rakanshaker"
             target="_blank"
           >
